--- a/EmptyProject/EmptyProject/Base.lproj/Main.storyboard
+++ b/EmptyProject/EmptyProject/Base.lproj/Main.storyboard
@@ -1,24 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="EmptyProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h0t-pS-RdM">
+                                <rect key="frame" x="57" y="228" width="300" height="450"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eh6-FX-89l">
+                                        <rect key="frame" x="30" y="45" width="240" height="360"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0eY-tl-Vhd">
+                                                <rect key="frame" x="24" y="36" width="192" height="288"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bpp-yu-uE0">
+                                                        <rect key="frame" x="19" y="29" width="154" height="230"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Auto Layout" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSF-Bl-Iz7">
+                                                                <rect key="frame" x="31.5" y="104.5" width="91" height="21"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" red="1" green="0.95736220063756139" blue="0.27941480183221923" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstItem="KSF-Bl-Iz7" firstAttribute="centerX" secondItem="Bpp-yu-uE0" secondAttribute="centerX" id="aVa-LT-4Tc"/>
+                                                            <constraint firstItem="KSF-Bl-Iz7" firstAttribute="centerY" secondItem="Bpp-yu-uE0" secondAttribute="centerY" id="vBS-TE-izY"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="Bpp-yu-uE0" firstAttribute="centerY" secondItem="0eY-tl-Vhd" secondAttribute="centerY" id="Q5d-9j-OrQ"/>
+                                                    <constraint firstItem="Bpp-yu-uE0" firstAttribute="width" secondItem="0eY-tl-Vhd" secondAttribute="width" multiplier="0.802083" id="eHD-pa-xOd"/>
+                                                    <constraint firstItem="Bpp-yu-uE0" firstAttribute="height" secondItem="0eY-tl-Vhd" secondAttribute="height" multiplier="0.798611" id="qZA-TI-D3U"/>
+                                                    <constraint firstItem="Bpp-yu-uE0" firstAttribute="centerX" secondItem="0eY-tl-Vhd" secondAttribute="centerX" id="u89-8p-DZy"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.29503980801381335" green="0.7803921568627451" blue="0.47226096018057673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="0eY-tl-Vhd" firstAttribute="width" secondItem="Eh6-FX-89l" secondAttribute="width" multiplier="0.8" id="85X-gJ-b5f"/>
+                                            <constraint firstItem="0eY-tl-Vhd" firstAttribute="centerY" secondItem="Eh6-FX-89l" secondAttribute="centerY" id="9HV-Jz-9JS"/>
+                                            <constraint firstItem="0eY-tl-Vhd" firstAttribute="height" secondItem="Eh6-FX-89l" secondAttribute="height" multiplier="0.8" id="Xrz-DG-eeA"/>
+                                            <constraint firstItem="0eY-tl-Vhd" firstAttribute="centerX" secondItem="Eh6-FX-89l" secondAttribute="centerX" id="uBH-Wc-glE"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                <constraints>
+                                    <constraint firstItem="Eh6-FX-89l" firstAttribute="centerX" secondItem="h0t-pS-RdM" secondAttribute="centerX" id="3G7-5s-MO9"/>
+                                    <constraint firstItem="Eh6-FX-89l" firstAttribute="width" secondItem="h0t-pS-RdM" secondAttribute="width" multiplier="0.8" id="3Y3-na-Zlb"/>
+                                    <constraint firstItem="Eh6-FX-89l" firstAttribute="height" secondItem="h0t-pS-RdM" secondAttribute="height" multiplier="0.8" id="IaS-VH-2FP"/>
+                                    <constraint firstItem="Eh6-FX-89l" firstAttribute="centerY" secondItem="h0t-pS-RdM" secondAttribute="centerY" id="LYA-yv-VNg"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="h0t-pS-RdM" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.502232" id="C9M-2E-Ueo"/>
+                            <constraint firstItem="h0t-pS-RdM" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.724638" id="duw-Hb-YiS"/>
+                            <constraint firstItem="h0t-pS-RdM" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="glL-jM-pkG"/>
+                            <constraint firstItem="h0t-pS-RdM" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ol7-dZ-fm1"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="35" y="94"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
